card hide/flip working, fixed overflow with min-width.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1335,7 +1335,7 @@ form p {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 45rem;
+  height: 50rem;
   width: 35rem;
   background-color: var(--color-grey-light);
   padding: 4rem 3rem;
@@ -1375,8 +1375,55 @@ form p {
   word-wrap: break-word;
 }
 
+.review__card--answer-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  perspective: 1000px;
+  background-color: var(--color-grey-light);
+  border: var(--color-grey-dark);
+  border-radius: 1rem;
+}
+
+.review__card--answer-container:hover .back {
+  transform: rotateY(0);
+}
+
+.review__card--answer-container:hover .front {
+  transform: rotateY(180deg);
+}
+
+.review__card--answer-container .face {
+  position: absolute;
+  width: 100%;
+  height: min-content;
+  backface-visibility: hidden;
+  background-color: var(--color-grey-light);
+  border: 1rem solid var(--color-grey-dark);
+  border-radius: 1rem;
+}
+
+.review__card--answer-container .front {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: rotateY(0);
+  transition: transform 0.5s;
+}
+
+.review__card--answer-container .back {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1rem;
+  transform: rotateY(-180deg);
+  transition: transform 0.5s;
+}
+
 .review__card--yomikata,
-.review__card--english {
+.review__card--english,
+.review__card--subtitle {
   font-size: 2rem;
 }
 
